# EECE5554-Group-3

./: .gitignore  Dockerfile  README.md  entrypoint.sh
Docker/: Dockerfile  Dockerfile.example  README.md
docker/: Dockerfile.pc_simulation  Dockerfile.rpi_3b  Dockerfile.rpi_general  Dockerfile.rpi_testing
docker/entrypoints/: pc_entrypoint.sh  rpi_entrypoint.sh  rpi_testing_entrypoint.sh
map_sim/: README.md
pc_workspace/scripts/: ros2_bag_to_imu_txt.py  ros2_bag_to_lidar_txt.py
pc_workspace/src/gazebo_simulation/: package.xml  setup.py
pc_workspace/src/sensor_simulator/: package.xml  setup.py
pc_workspace/src/slam_visualization/: package.xml  setup.cfg
pc_workspace/src/slam_visualization/launch/: visualize_all.launch.py  visualize_camera.launch.py  visualize_lidar.launch.py
pc_workspace/src/slam_visualization/rviz/: full_visualization.rviz  lidar_visualization.rviz
ros2_workspace/src/camera_driver/: package.xml
ros2_workspace/src/imu_driver/: package.xml  setup.py
ros2_workspace/src/sensor_simulator/: package.xml  setup.py
ros2_workspace/src/slam_visualization/: setup.py
rpi_scripts/: camera_frame_stream.py
rpi_workspace/: frames_2025-11-20_08.00.21.gv
rpi_workspace/src/: README.md
rpi_workspace/src/camera_driver/: setup.py
rpi_workspace/src/drivers_bringup/: package.xml  setup.cfg  setup.py
rpi_workspace/src/drivers_bringup/launch/: all_drivers.launch.py
rpi_workspace/src/imu_driver/: setup.py
rpi_workspace/src/lidar_driver/: package.xml  setup.py
rpi_workspace/src/robot_description/: CMakeLists.txt  (+1 more)
sensor_pkgs/: README.md
(+31 files in other folders)
