<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_visualization</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cerqueracano.j@northeastern.edu">jecerquerac</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

<!-- Visualization dependencies -->
  
  <exec_depend>rviz2</exec_depend>
  <exec_depend>plotjuggler-ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
