<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drivers_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cerqueracano.j@northeastern.edu">jecerquerac</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <exec_depend>imu_driver</exec_depend>
  <exec_depend>camera_driver</exec_depend>
  <exec_depend>lidar_driver</exec_depend>
  <exec_depend>ros2launch</exec_depend>
<exec_depend>robot_description</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
